Search record: prevented buttons and dates from wrapping and added icon buttons

--- a/src/app/components/search-results/search-results.component.scss
+++ b/src/app/components/search-results/search-results.component.scss
@@ -20,13 +20,15 @@ table {
 .mat-row .mat-cell {
   border-bottom: 1px solid transparent;
   border-top: 1px solid transparent;
-  cursor: pointer;
 }
 
-.mat-mdc-row .mat-mdc-cell {
-  cursor: pointer;
+.mat-column-dob {
+  flex: none;
+  white-space: nowrap;
 }
 
-.mat-mdc-row:hover .mat-mdc-cell {
-  background-color: whitesmoke;
+.mat-column-actions {
+  flex: none;
+  width: 20%;
+  white-space: nowrap;
 }
